# simple-cmd

./: .stack-all  .travis.yml  ChangeLog.md  LICENSE  MAINTAINER-NOTES  Makefile  README.md  SimpleCmd.hs  SimpleCommand.hs  TODO  simple-cmd.cabal  stack-lts6.yaml
.github/workflows/: build.yml
Simple/: Command.hs
SimpleCmd/: Git.hs  Rpm.hs
src/: SimpleCmd.hs
src/SimpleCmd/: Git.hs
test/: Spec.hs
