name:                simple-cmd
version:             0.1.0.0
synopsis:            Simple shell commands
description:         Simple shell command processing
license:             BSD3
license-file:        LICENSE
author:              Jens Petersen
maintainer:          juhpetersen@gmail.com
copyright:           Jens Petersen <juhpetersen@gmail.com>
category:            System
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.0.4, GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4,
                     GHC == 7.10.3, GHC == 8.0.2

library
  exposed-modules:     SimpleCommand
  -- other-modules:       
  build-depends:       base, filepath, process
  default-language:    Haskell2010
  default-extensions:  CPP
